# Q

./: .env.example  .gitignore  .npmrc  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  config.py  database.py  dev.db  initdb.py  main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_users_table.py  0002_create_strategies_table.py  0003_create_backtest_runs_table.py  0004_add_equity_curve_and_trades_to_runs.py  0005_align_backtest_runs_with_model.py  0006_create_ohlcv_bars_table.py
apps/api/models/: __init__.py  backtest_run.py  ohlcv_bar.py  strategy.py  user.py
apps/api/routers/: auth.py  backtest.py  data.py  health.py  strategy.py
apps/api/sandbox/: runner.py
apps/api/schemas/: auth.py  backtest_run.py  data.py  strategy.py
apps/api/services/: auth.py  block_compiler.py  celery_app.py  data_ingestion.py  metrics.py  python_validator.py  simple_engine.py  storage.py  strategy.py  tasks.py
apps/api/services/data/: csv.py  protocol.py  registry.py  store.py
apps/api/services/data/providers/: akshare.py  alpaca.py  alpha_vantage.py  binance.py  polygon.py  yahoo.py
apps/api/services/engines/: _runtime.py  backtrader.py  exceptions.py  execution_model.py  protocol.py  registry.py  sandbox.py  simple.py  strategy_contract.py  strategy_shape.py  vectorbt.py
apps/api/tests/: conftest.py  test_auth.py  test_backtest.py  test_backtrader_engine.py  test_data.py  test_data_connectors.py  test_engine_routing.py  test_execution_model.py  test_golden_backtest.py  test_health.py  test_metrics_extended.py  test_ohlcv_store.py  test_sandbox.py  test_schema_diff.py  test_strategy.py  test_vectorbt_engine.py
apps/mobile/: app.json  package.json
apps/mobile/app/: _layout.tsx  index.tsx  results.tsx  run.tsx  strategies.tsx
apps/mobile/lib/: api.ts  theme.ts
apps/web/: next.config.mjs  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/e2e/: backtest.spec.ts  dashboard.spec.ts  strategy.spec.ts
docs/design/: design-principles.md  tailwind-tokens.ts
docs/superpowers/plans/: 2026-04-10-phase-1-scaffold.md
docs/superpowers/specs/: 2026-04-10-backtesting-app-design.md  (+3 more)
(+28 files in other folders)
