[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backtesting-api"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.1",
  "pydantic-settings==2.2.1",
  "sqlalchemy==2.0.30",
  "asyncpg==0.29.0",
  "alembic==1.13.1",
  "redis==5.0.4",
  "celery==5.4.0",
  "python-jose[cryptography]==3.3.0",
  "bcrypt>=4.0.0",
  "python-multipart==0.0.9",
  "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "pytest-asyncio==0.23.6",
  "pytest-cov==5.0.0",
  "httpx==0.27.0",
  "ruff==0.4.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
