[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backtesting-api"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.1",
  "pydantic-settings==2.2.1",
  "sqlalchemy==2.0.30",
  "asyncpg==0.29.0",
  "alembic==1.13.1",
  "redis==5.0.4",
  "celery==5.4.0",
  "python-jose[cryptography]==3.3.0",
  "bcrypt>=4.0.0",
  "python-multipart==0.0.9",
  "httpx==0.27.0",
]

[project.optional-dependencies]
# Free data providers — no API key required
# Install: pip install -e ".[data-free]"
data-free = [
  "yfinance>=0.2.40",
  "ccxt>=4.3.0",
  "akshare>=1.12.0",
  "pandas>=2.0",
  "numpy>=1.26",
]
# Backtest engines (Phase 4) — install when ready to replace SimpleEngine
# Install: pip install -e ".[engines]"
engines = [
  "vectorbt==0.26.2",
  "backtrader==1.9.78.123",
  "numba>=0.59,<0.60",
  "numpy>=1.26,<2.0",
]
dev = [
  "pytest==8.2.0",
  "pytest-asyncio==0.23.6",
  "pytest-cov==5.0.0",
  "httpx==0.27.0",
  "ruff==0.4.4",
  "testcontainers>=4.8.0",
  "psycopg2-binary>=2.9",
  "aiosqlite>=0.20.0",
]
sandbox = [
  "msgpack>=1.0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
